--- a/.pkgr.yml
+++ b/.pkgr.yml
@@ -1,9 +1,10 @@
 targets:
+  ubuntu-16.04:
   ubuntu-14.04:
   ubuntu-12.04:
   debian-7:
   debian-8:
-  centos-6:
   centos-7:
-  fedora-20:
+  centos-6:
   sles-12:
+  sles-11:
