--- a/.pkgr.yml
+++ b/.pkgr.yml
@@ -1,22 +1,30 @@
 default_dependencies: false
 targets:
   ubuntu-16.04:
-    dependencies: &dependencies
+    dependencies:
       - libpq5
       - libxml2
       - libxslt1.1
   ubuntu-14.04:
     dependencies:
-      <<: *dependencies
+      - libpq5
+      - libxml2
+      - libxslt1.1
   ubuntu-12.04:
     dependencies:
-      <<: *dependencies
+      - libpq5
+      - libxml2
+      - libxslt1.1
   debian-7:
     dependencies:
-      <<: *dependencies
+      - libpq5
+      - libxml2
+      - libxslt1.1
   debian-8:
     dependencies:
-      <<: *dependencies
+      - libpq5
+      - libxml2
+      - libxslt1.1
   centos-7:
     dependencies:
       - libxml2
