One last build for CentOS 6

--- a/.pkgr.yml
+++ b/.pkgr.yml
@@ -30,6 +30,11 @@ targets:
       - libxml2
       - libxslt
       - postgresql-libs
+  centos-6:
+    dependencies:
+      - libxml2
+      - libxslt
+      - postgresql-libs
   sles-12:
     dependencies:
       - libxml2
