--- a/.pkgr.yml
+++ b/.pkgr.yml
@@ -1,5 +1,10 @@
 default_dependencies: false
 targets:
+  ubuntu-18.04:
+    dependencies:
+      - libpq5
+      - libxml2
+      - libxslt1.1
   ubuntu-16.04:
     dependencies:
       - libpq5
